# quantathon

./: .gitignore  .replit  AUTHENTICATION_SETUP.md  README.md  app.py  package-lock.json  package.json  pyproject.toml  replacements.txt  replit.md  start.bat
attached_assets/: Pasted-Design-and-develop-an-AI-powered-Speech-Therapy-Assistant-to-help-users-improve-their-speech-clarity-1756314319194_1756314319195.txt  Pasted-Unique-Innovative-Features-for-AI-Speech-Therapy-Assistant-Adaptive-Emotion-Modulation-The-AI-c-1756314445807_1756314445807.txt
backend/: README.md  app.py  pom.xml  requirements.txt  test_progress.py
data/: exercises.json  phonemes.json
frontend/: README.md  index.html  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  setupProxy.js
frontend/src/components/: AIExercises.js  AnalysisResults.js  AudioRecorder.js  Auth.css  BackButton.js  DailyScenario.js  Dashboard.js  DatabaseExercises.js  ExerciseCard.jsx  ExerciseDashboard.js  ExerciseModule.js  Exercises.js  GamifiedPronunciations.js  Home.js  Login.js  Navbar.css  Navbar.js  PointsRedemption.js  Progress.js  ProgressChart.jsx  Settings.js  Sidebar.jsx  Signup.js  SpeechTherapy.js  Storytelling.js  VoiceFeedback.jsx
frontend/src/config/: api.js
frontend/src/contexts/: AuthContext.js
frontend/src/data/: exercises.js
frontend/src/services/: aiService.js  conversationService.js  (+2 more)
nlp_service/: requirements.txt  speech_analyzer.py
pages/: exercises.py  progress.py  settings.py
utils/: audio_processor.py  data_manager.py  scoring_engine.py
(+57 files in other folders)
