[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "audio-recorder-streamlit>=0.0.10",
    "flask>=3.1.2",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "requests>=2.32.5",
    "scipy>=1.16.1",
    "streamlit>=1.49.0",
    "werkzeug>=3.1.3",
]
